--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -17,17 +17,16 @@ global:
   namespaceName: ""
   recreationFlag: 1
   mpApiGatewayPort: 8050
-  mpApiGatewayPortName: api-gtw-8050
+  mpApiGatewayPortName: http-8050
   mpKafkaRestProxyPort: 8060
   mpBCClientPort: 8070
   mpEntityManagerPort: 8090
 
 service:
-  type: NodePort
-  nodePort: ""
+  type: ClusterIP
 
 hpa:
-  enabled: false
+  enabled: true
   minReplicas: 1
   maxReplicas: 2
   targetAverageCPUUtilization: 70
