--- a/helm/templates/service.yaml
+++ b/helm/templates/service.yaml
@@ -9,6 +9,7 @@ spec:
   ports:
     - port: {{ required "A valid .Values.global.mpApiGatewayPort entry required!" .Values.global.mpApiGatewayPort }}
       targetPort: {{ required "A valid .Values.global.mpApiGatewayPort entry required!" .Values.global.mpApiGatewayPort }}
+      nodePort: {{ required "A valid .Values.global.mpApiGatewayNodePort entry required!" .Values.global.mpApiGatewayNodePort }}
       protocol: TCP
       name: {{ required "A valid .Values.global.mpApiGatewayPortName entry required!" .Values.global.mpApiGatewayPortName }}
   selector:
