--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     {{- include "mp-api-gateway.labels" . | nindent 4 }}
 spec:
-  replicas: {{ .Values.replicaCount }}
+{{/*  replicas: {{ .Values.replicaCount }}*/}}
   selector:
     matchLabels:
       {{- include "mp-api-gateway.selectorLabels" . | nindent 6 }}
